<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_navigation_view"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/shareVia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sixteen_16dp"
        android:paddingTop="8dp"
        android:paddingRight="@dimen/sixteen_16dp"
        android:paddingBottom="8dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:padding="@dimen/two_2dp"
            android:src="@drawable/ic_share"
            android:tint="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pangram_regular"
            android:gravity="center"
            android:text="@string/label_share"
            android:textColor="?android:textColorPrimary"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/favController"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sixteen_16dp"
        android:paddingTop="8dp"
        android:paddingRight="@dimen/sixteen_16dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/favIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:padding="@dimen/two_2dp"
            android:src="@drawable/ic_favorite_added_yellow"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/favLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pangram_regular"
            android:gravity="center"
            android:text="Unfavorite"
            android:textColor="?android:textColorPrimary"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sixteen_16dp"
        android:paddingTop="8dp"
        android:paddingRight="@dimen/sixteen_16dp"
        android:paddingBottom="8dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:padding="@dimen/two_2dp"
            android:src="@drawable/ic_playlist_add"
            android:tint="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pangram_regular"
            android:gravity="center"
            android:text="@string/label_add_to"
            android:textColor="?android:textColorPrimary"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sixteen_16dp"
        android:paddingTop="8dp"
        android:paddingRight="@dimen/sixteen_16dp"
        android:paddingBottom="8dp">

        <ImageButton
            android:id="@+id/btnAddAsNext"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/two_2dp"
            android:src="@drawable/ic_play"
            android:tint="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pangram_regular"
            android:gravity="center"
            android:text="@string/label_play_next"
            android:textColor="?android:textColorPrimary"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>